# wintheon

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: launcher.rs
src/: lib.rs
src/file/: entry.rs  error.rs  icon.rs  mod.rs  version_info.rs
src/file/entries/: mod.rs  regular_file.rs  reparse_point.rs  shortcut.rs
src/gather/: dedup.rs  gatherer.rs  mod.rs  origin.rs  relevance.rs  sort.rs  source.rs
src/gather/sources/: desktop.rs  mod.rs  start_menu.rs  windows_apps.rs
src/win/: com.rs  mod.rs
src/win/files/: icon.rs  mod.rs  reparse.rs  shortcut.rs  version_info.rs
tests/: integration.rs  unit.rs
